fix search z-index

--- a/docs/app/styles.css
+++ b/docs/app/styles.css
@@ -49,10 +49,6 @@ body {
   color: var(--color-fd-primary);
 }
 
-#nd-nav {
-  z-index: 10000;
-}
-
 :focus-visible {
   box-shadow: unset !important;
 }
